# rust-vs-nodejs-web-framework-performance

./: README.md
nodejs-express/: README.md  main.js  package-lock.json  package.json
rust-rocket/: Cargo.toml  README.md  Rocket.toml
rust-rocket/src/: main.rs
rust-rocket/src/routes/: index.rs
